feat(scraper): add and handle error state for missing product page data

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -163,6 +163,7 @@
   "errorMessages": {
     "serverError": "Oops! Something went wrong. Please try again.",
     "scrapeError": "Error loading product data. Please try again.",
+    "scrapeMissingData": "We couldn't find the required product details on this page to search for alternatives.",
     "scrapeErrorCard": "Product details unavailable...",
     "missingTitle": "Missing product title...",
     "scrapeErrors": {
